--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.ryanliptak.com/" }
 }
 
 loom {
@@ -30,7 +32,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	modCompileOnly("squeek.appleskin:appleskin-fabric:mc1.20-2.5.1") {
+		exclude module: 'modmenu'
+		transitive = false
+	}
 }
 
 processResources {
