Stone cutter multiversion support

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,18 @@ pluginManagement {
 		gradlePluginPortal()
 	}
 }
+
+plugins {
+	id("dev.kikugie.stonecutter") version "0.6.1"
+}
+
+stonecutter {
+	kotlinController = false
+	centralScript = "build.gradle"
+
+	// Subproject configuration
+	create(getRootProject()) {
+		versions "1.20.1", "1.21.1", "1.21.5"
+		vcsVersion = "1.20.1"
+	}
+}
