--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 version = project.mod_version
 group = project.maven_group
 
+def mcVersion = stonecutter.current.version
+
 base {
 	archivesName = project.archives_base_name
 }
@@ -20,8 +22,14 @@ repositories {
 	maven { url "https://maven.ryanliptak.com/" }
 }
 
+def awFile = stonecutter.eval(mcVersion, "=1.20.1") ? '1.20.1.accesswidener' : stonecutter.eval(mcVersion, "=1.21.1") ? '1.21.1.accesswidener' : '1.21.5.accesswidener'
+
 loom {
-	accessWidenerPath = file("src/main/resources/hotbarapi.accesswidener")
+	accessWidenerPath = file("../../src/main/resources/${awFile}")
+	runConfigs.all {
+		ideConfigGenerated true // Run configurations are not created for subprojects by default
+		runDir "../../run" // Use a shared run folder and create separate worlds
+	}
 }
 
 dependencies {
@@ -43,7 +51,7 @@ processResources {
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
-		expand "version": inputs.properties.version
+		expand "version": project.version, 'mcdep': project.property('supported_mc_versions'), 'javadep': stonecutter.eval(mcVersion, ">=1.20.5") ? '>=21' : '>=17', 'aw': awFile
 	}
 }
 
@@ -57,8 +65,10 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	def java = stonecutter.eval(mcVersion, ">=1.20.5")
+			? JavaVersion.VERSION_21 : JavaVersion.VERSION_17
+	targetCompatibility = java
+	sourceCompatibility = java
 }
 
 jar {
