--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,14 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.4.0
+mod_version=1.4.1
 maven_group=dev.sygii
 archives_base_name=hotbarapi
 
 # Dependencies
 fabric_version=0.92.5+1.20.1
+ultralib_version=1.0.5+1.20.1
