--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,9 @@ plugins {
 	id 'maven-publish'
 }
 
-version = project.mod_version
-group = project.maven_group
-
 def mcVersion = stonecutter.current.version
+version = project.mod_version + "+" + mcVersion
+group = project.maven_group
 
 base {
 	archivesName = project.archives_base_name
@@ -20,6 +19,7 @@ repositories {
 	// for more information about repositories.
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.ryanliptak.com/" }
+	mavenLocal()
 }
 
 def awFile = "${mcVersion}.accesswidener"
@@ -40,11 +40,13 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modApi "dev.sygii:ultralib:${project.ultralib_version}"
 
 	modCompileOnly("squeek.appleskin:appleskin-fabric:mc1.20-2.5.1") {
 		exclude module: 'modmenu'
 		transitive = false
 	}
+
 }
 
 processResources {
