--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 stonecutter.active "1.20.1"
 
-stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) { 
+/*stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) {
     setGroup "project"
     ofTask "build"
-}
+}*/
